Scroll to top and make sure text is always visible

--- a/src/styling/main.scss
+++ b/src/styling/main.scss
@@ -131,7 +131,6 @@ body {
     bottom: 0;
     left: 15%;
     right: 15%;
-    font-size: 1.4em;
     @media screen and (max-width: $mobile-width) {
         left: 1%;
         right: 1%;
@@ -163,6 +162,9 @@ body {
 
     h1 {
         font-size: 2.8em;
+        @media screen and (max-width: $mobile-width) {
+            font-size: 2em;
+        }
     }
 
     p {
@@ -191,6 +193,10 @@ body {
     margin-top: 25px;
     gap: 10px;
     width: 100%;
+    @media screen and (max-width: $mobile-width) {
+        justify-content: center;
+    }
+
 }
 
 .skill {
@@ -242,7 +248,7 @@ body {
     background-color: $just-black;
 
     @media screen and (max-width: $mobile-width) {
-        padding: 2rem 1rem;
+        padding: 2rem 1rem 10rem 1rem;
         margin: 0;
         height: 140vh;
     }
